fix: tune flexbox(unwraped to warp) and add transion, padding to info panel

--- a/style.css
+++ b/style.css
@@ -125,15 +125,18 @@ img,
 .team-area{
 	display: flex;
 	width: 90%;
+	margin: 3%;
 	justify-content: space-around;
+	flex-wrap: wrap;
 }
 .single-team{
 	width: 30%;
-	height: 400px;
-	padding: 24px;
+	height: 300px;
+	
 	background: #fff;
 	position: relative;
 	display: flex;
+	
 	align-items: flex-end;
 	transition: .6s ease-out;
 	box-shadow: 0 10px 10px rgba(0,0,0.5);
@@ -141,6 +144,7 @@ img,
 
 .single-team:hover{
 	transform: translateY(15px);
+	
 }
 
 .single-team:hover:before{
@@ -150,6 +154,11 @@ img,
 .single-team:hover .team-text{
 	opacity: 1;
 	transform: translateY(0);
+	background: #fff;
+	margin: 10px;
+	padding: 10px;
+	transition: .2s ease-out;
+	
 }
 
 .single-team::before{
@@ -160,7 +169,8 @@ img,
 	display: block;
 	width: 100%;
 	height: 100%;
-	background: linear-gradient(to top,#000,transparent);
+	background: #fff;
+
 }
 
 
